# newsletter

./: .env.local  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.template.yaml  spec.yaml
configuration/: base.yaml  local.yaml  production.yaml  template.md
migrations/: 20230812191355_create_subscribers_table.sql  20230815002857_make_status_not_null_in_subscriptions.sql
scripts/: README.md  db_init.sh  db_migrations_init.sh  do_init_services.sh  do_services_init.sh  docker_build.sh  docker_run.sh  init_migrations.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  ping.rs  subscriptions.rs
tests/: README.md  endpoints.rs  ping_endpoint.rs
tests/api/: helpers.rs  main.rs  ping.rs  subscriptions.rs
