[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "newsletter_server"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
config = "0.13.3"
dotenv = "0.15.0"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11.18"
