[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "newsletter_server"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
config = "0.13.3"
dotenv = "0.15.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde-aux = "4.2.0"
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.6"
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.4.1", features = ["v4"] }
validator = "0.16.1"

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
claims = "0.7.1"
fake = "2.6.1"
once_cell = "1.18.0"
reqwest = "0.11.18"
